fixed z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -199,7 +199,7 @@
   
     background:#000 url(../assets/Images/ani-stars.png) repeat top center;
   
-    z-index:0;
+    z-index:-10;
   
   }
   .twinkling{
